Fixed title overflows on modular project windows.

--- a/css/project-modal.css
+++ b/css/project-modal.css
@@ -199,6 +199,10 @@
         font-size: 18px;
     }
 
+    .modal-title {
+        font-size: 1rem;
+    }
+
     .modal-button {
         font-size: 20px;
     }
